--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
   <title>InLege - Studuj práva efektivně</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -47,7 +47,7 @@
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
           <div class="card d-flex flex-row justify-content-center align-items-center">
             <div class="card-body text-center">
-              <p class="text-muted text-smaller mb-1">Karta <span id="progressCardNumMobile"><%= nextNum - 1 %></span> z <%= sectionLength %>
+              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><%= nextNum - 1 %></span> z <%= sectionLength %>
               </p>
               <div class="progress">
                 <% if(progressStatus && progressStatus===0){ %>
@@ -73,7 +73,13 @@
             <% } %>
             <% if (!currentUser && demoCardsSeen > 10) { %>
               <div class="card-body flip-card-front pb-0 px-0">
-                <h4>Tohle je limit pro demo verzi. Zaregistruj se, prosím.</h4>
+                <div class="row height-100 demo-finished-card">
+                  <div class="col-12 d-flex flex-column justify-content-center align-items-center ">
+                      <p class="demo-finished-main text-center mb-4">Super! Tohle bylo tvých 5 ukázkových kartiček.</p>
+                      <p class="demo-finished-text text-center text-smaller text-muted mt-3 mb-4">Teď už víš, jak InLege funguje. Zaregistruj se a získej přístup k dalším <b>více než 1 500 kartičkám</b>. Je to zdarma!</p>
+                      <a href="/auth/user/new" class="btn btn-lg btn-danger my-3">Registrace zdarma</a>
+                  </div>
+                </div>
               </div>
             <% } else { %>
               <div class="card-body flip-card-front pb-0 px-0">
@@ -82,7 +88,7 @@
                   <div class="card-text m-4 text-center" id="pageA"><%- card.pageA %></div>
                 </div>
               </div>
-              <div class="card-body flip-card-back pb-0 px-0">
+              <div class="card-body flip-card-back p-sm-3 pt-sm-4 px-0 pt-3">
                 <div class="back-main-content d-flex justify-content-center align-items-center text-gradient">
                   <div id="loaderB"></div>
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
@@ -97,7 +103,12 @@
         <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
           <div class="card">
             <div class="card-body text-center">
-              <p class="text-muted text-smaller">Karta <span id="progressCardNumMac"><%= nextNum - 1 %></span> z <%= sectionLength %>
+              <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
+                <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
+                  <img src="<%= iconPath %>" class="img-fit" alt="" />
+                </div>
+              </div>
+              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><%= nextNum - 1 %></span> z <%= sectionLength %>
               </p>
               <div class="progress mb-2">
                 <% if(progressStatus && progressStatus===0){ %>
@@ -115,7 +126,7 @@
         
       </div>
       
-      <% if (!currentUser && demoCardsSeen > 10) { %>
+      <% if (!currentUser && demoCardsSeen > 5) { %>
         <!-- empty space -->
       <% } else { %>
       <!--FRONT CARD MENU-->
@@ -143,7 +154,7 @@
                   <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
                 <% } %>
               <% } else if(!currentUser || !currentUser.isPremium) { %>
-              <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
+              <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg menu-icon"></i></a></div>
               <% } %>
             </div>
             <div>
@@ -154,8 +165,8 @@
               <% } %>
             </div>
             <div>
-              <a href="#" id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></a>
-              <a href="#" id="rotate-back-mobile-rendered" class="zobrazovat-jen-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></a>
+              <a href="#" id="rotate-back-rendered" class="nezobrazovat-na-mobilu rotate-icon"><i class="fas fa-sync-alt fa-lg"></i></a>
+              <a href="#" id="rotate-back-mobile-rendered" class="zobrazovat-jen-na-mobilu rotate-icon"><i class="fas fa-sync-alt fa-lg"></i></a>
             </div>
           </div>
         </div>
@@ -163,7 +174,10 @@
       <% } %>
 
       <div class="row">
-        <div class="col-lg-6 offset-lg-2">
+        <% if (!currentUser && demoCardsSeen > 5) { %>
+         <!-- empty space -->
+        <% } else { %>
+        <div class="col-lg-6 offset-lg-2" id="mini-menu">
           <div class="text-center mt-4 servis-btns d-flex justify-content-around align-items-center">
             <% if (currentUser && currentUser.admin) { %>
               <div id="upravit-kartu-div">
@@ -188,7 +202,7 @@
                 <p class="text-muted mb-0 px-3 nezobrazovat-na-mobilu">Otáčej [mezerníkem]</p>
           </div>
         </div>
-        
+        <% } %>
       </div>
     </main>
 
