three new icons on landing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,10 +61,10 @@
   
         <div class="album pt-5 pb-3 mb-5">
           <div class="container">
-            <div class="mb-5 landing-info-wrapper d-none-780-up">
+            <div class="mb-5 landing-info-wrapper d-none-992-up">
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
-                        <div class="p-3 info-icon">
-                            <i class="far fa-copy fa-3x text-muted"></i>
+                        <div class="info-icon">
+                            <img src="/img/icon_cards.png" class="img-fit-100" alt="cards">
                         </div>
                         <div>
                             <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
@@ -72,8 +72,8 @@
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
-                        <div class="p-3 info-icon">
-                            <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
+                        <div class="info-icon">
+                            <img src="/img/icon_mobileandpc.png" class="img-fit-100" alt="cards">
                         </div>
                         <div>
                             <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
@@ -81,8 +81,8 @@
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
-                        <div class="p-3 info-icon">
-                            <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
+                        <div class="info-icon">
+                            <img src="/img/icon_knowledge.png" class="img-fit-100" alt="cards">
                         </div>
                         <div>
                             <p class="info-main"><%= numOfCategories %> oblastí, <%= numOfSections  %> balíčků</p>
@@ -91,13 +91,13 @@
                     </div>
             </div>
 
-                <div class="mb-5 row d-none-780-down">
+                <div class="mb-5 row d-none-992-down">
                     <div class="col-12">
                         
-                        <div class="landing-info col-md-3 offset-md-2">
+                        <div class="landing-info col-md-3 offset-md-3">
                             <div class="row my-2">
                                 <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <i class="far fa-copy fa-3x text-muted"></i>
+                                    <img src="/img/icon_cards.png" class="img-fit-small" alt="cards">
                                 </div>
                                 <div class="col-9">
                                     <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
@@ -105,10 +105,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="landing-info col-md-3">
+                        <div class="landing-info col-md-3 offset-md-3">
                             <div class="row my-2">
                                 <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
+                                    <img src="/img/icon_mobileandpc.png" class="img-fit-small" alt="cards">
                                 </div>
                                 <div class="col-9">
                                     <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
@@ -116,10 +116,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="landing-info col-md-3">
+                        <div class="landing-info col-md-3 offset-md-3">
                             <div class="row my-2">
                                 <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
+                                    <img src="/img/icon_knowledge.png" class="img-fit-small" alt="cards">
                                 </div>
                                 <div class="col-9">
                                     <p class="info-main"><%= numOfCategories %> oblastí, <%= numOfSections  %> balíčků</p>
