--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -12,6 +12,10 @@
     zoom: 130%;
 }
 
+.width-20 {
+    width: 20%;
+}
+
 .jumbotron-heading {
     font-size: 8vh;
 }
@@ -28,9 +32,28 @@
     height: 100px;
 }
 
+.info-icon {
+    max-width: 90px;
+    max-height: 90px;
+    text-align: center;
+}
+
 .img-fit {
     max-width:60%;
     max-height:60%;
+}
+
+.img-fit-100 {
+    max-width:100%;
+    max-height:100%;
+    padding: 10px;
+    padding-top: 0px;
+    padding-right: 15px;
+}
+
+.img-fit-small {
+    max-width:100%;
+    max-height:100%;
 }
 
 
@@ -89,7 +112,7 @@
     color: #4C0033;
 }
 
-.d-none-780-down {
+.d-none-992-down {
     display:none;
 }
 
@@ -123,7 +146,7 @@
     padding-top: 3px;
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 992px) {
     .landing-info-wrapper {
         flex-direction: column;
     }
@@ -132,11 +155,11 @@
         flex-grow: 1;
         width: 100%;
     }
-    .d-none-780-down {
+    .d-none-992-down {
         display:block;
     }
 
-    .d-none-780-up {
+    .d-none-992-up {
         display:none;
     }
   }
