--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -15,7 +15,7 @@
                             <input type="password" class="form-control" id="password" name="password" placeholder="Heslo" required>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger btn-lg w-100 mt-3" type="submit">Přihlásit se</button>
+                            <button class="btn btn-danger btn-lg w-100 mt-3" id="submit-login" type="submit">Přihlásit se</button>
                         </div>
                         <div class="text-center">
                             <a href="/auth/user/requestPassword" class="text-muted"><small>Zapomenuté heslo</small></a>
