--- a/views/category.ejs
+++ b/views/category.ejs
@@ -48,6 +48,9 @@
                                 <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                 <% if (currentUser && currentUser.admin) { %>
                                     <p class="text-muted text-small mb-0">ID sekce: <%= section._id %></p>
+                                    <p class="text-muted text-small mb-0">Spuštěna: <%= section.countStarted %></p>
+                                    <p class="text-muted text-small mb-0">Dokončena: <%= section.countFinished %></p>
+                                    <p class="text-muted text-small mb-0">Opakována: <%= section.countRepeated %></p>
                                    <% } %>
                             </div>
                         </div>
