--- a/views/admin/categoriesEdit.ejs
+++ b/views/admin/categoriesEdit.ejs
@@ -17,6 +17,10 @@
                     <label for="icon">Ikona</label>
                     <input class="form-control" id="icon" name="icon" rows="1" value="<%= category.icon %>" required></input>
                 </div>
+                <div class="form-group">
+                    <label for="orderNum">Ikona</label>
+                    <input class="form-control" id="orderNum" name="orderNum" rows="1" value="<%= category.orderNum %>" required></input>
+                </div>
                 <button class="btn btn-danger mt-5">Uložit změny</button>
             </form>
         </div>
