--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,141 +129,34 @@
                         </div>
                     </div>
                 </div>
-
             <div class="row">
-                <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/trestnipravo" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_tresthmota.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Trestní právo <br> hmotné</h5>
-                                <p class="text-muted"><%= trestnipravo.numOfCards %>  kartiček</p>
-                                <a href="/category/trestnipravo" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
+                <div class="offset-lg-2 col-lg-8">
+                    <div class="row">
+                        <% categories.forEach(cat => { %>
+                        <% if (cat.orderNum > -1) { %>
+                        <div class="col-lg-3 col-md-4 col-6 mb-4">
+                                <a href="/category/<%= cat.name %>" class="landing-link">
+                                    <div class="card">
+                                        <div class="d-flex justify-content-center">
+                                            <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
+                                                <img src="/img/<%= cat.icon %>" class="img-fit" alt="" />
+                                            </div>
+                                        </div>
+                                        <div class="card-body cat-text d-flex flex-column justify-content-between">
+                                            <div>
+                                                <h5 class="card-title"><%= cat.text %></h5>
+                                                <p class="text-muted"><%= cat.numOfCards %>  kartiček</p>
+                                            </div>
+                                            <a href="/category/<%= cat.name %>" class="btn btn-sm btn-danger">Studovat</a>
+                                        </div>
+                                    </div>
+                                </a>
                         </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/trestniproces" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_trestproces.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Trestní právo <br> procesní</h5>
-                                <p class="text-muted"><%= trestniproces.numOfCards %>  kartiček</p>
-                                <a href="/category/trestniproces" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/obcanskepravo" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_civilhmota.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Občanské právo <br> hmotné</h5>
-                                <p class="text-muted"><%= obcanskepravo.numOfCards %> kartiček</p>
-                                <a href="/category/obcanskepravo" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/civilniproces" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_civilproces.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Občanské právo <br> procesní</h5>
-                                <p class="text-muted"><%= civilniproces.numOfCards %> kartiček</p>
-                                <a href="/category/civilniproces" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
+                        <% } %>
+                        <% }) %>
+                    </div>
                 </div>
             </div>
-
-            <div class="row mt-lg-4">
-                <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/spravnipravo" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_sprava.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Správní právo</h5>
-                                <p class="text-muted"><%= spravnipravo.numOfCards %> kartiček</p>
-                                <a href="/category/spravnipravo" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/ustavnipravo" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_ustavko.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Ústavní právo</h5>
-                                <p class="text-muted"><%= ustavnipravo.numOfCards %> kartiček</p>
-                                <a href="/category/ustavnipravo" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/obchodnipravo" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_obchod.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Obchodní právo</h5>
-                                <p class="text-muted"><%= obchodnipravo.numOfCards %> kartiček</p>
-                                <a href="/category/obchodnipravo" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/pravnickaanglictina" class="landing-link">
-                        <div class="card  ">
-                            <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_anglictina.png" class="img-fit" alt="" />
-                                </div>
-                            </div>
-                            <div class="card-body cat-text">
-                                <h5 class="card-title">Právnická angličtina</h5>
-                                <p class="text-muted"><%= pravnickaanglictina.numOfCards %> kartiček</p>
-                                <a href="/category/pravnickaanglictina" class="btn btn-sm btn-danger">Studovat</a>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
         </div>
     </div>
 
