--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -1,8 +1,9 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container">
     <div class="row">
-        <div class="col-11 offset-1 mb-3">
+        <div class="col-12 mb-3">
             <h5>Správa kategorií</h5>
+            <p class="text-muted text-smaller">Na hlavní stránce se zobrazují jen kategorie s pořadím 1 a výše, nižší čísla lze užít pro přípravu kategorií před zveřejněním.</p>
         </div>
     </div>
     <div class="row">
