--- a/views/category.ejs
+++ b/views/category.ejs
@@ -46,7 +46,7 @@
                             <div>
                                 <p class="m-0 section-name"><%= section.name %></p>
                                 <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
-                                <% if (currentUser && currentUser.admin) { %>
+                                <% if (currentUser && currentUser.isEditor) { %>
                                     <p class="text-muted text-small mb-0">ID sekce: <%= section._id %></p>
                                     <p class="text-muted text-small mb-0">Spuštěna: <%= section.countStarted %></p>
                                     <p class="text-muted text-small mb-0">Dokončena: <%= section.countFinished %></p>
@@ -74,7 +74,7 @@
                         <div class="col-2">
                             <p class="m-0"><%= section.cards.length %> </p>
                             <p class="text-muted text-small mb-0">kartiček</p>
-                            <% if (currentUser && currentUser.admin) { %>
+                            <% if (currentUser && currentUser.isEditor) { %>
                                 <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                 <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
                                 <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
@@ -110,13 +110,13 @@
                     <% } %>
 
                     <!-- NEZVEREJNENE BALICKY -->
-                    <% if(!section.isPublic && currentUser && currentUser.admin){ %> 
+                    <% if(!section.isPublic && currentUser && currentUser.isEditor){ %> 
                         <div class="row py-2">
                             <div class="col-5 d-flex align-items-center">                    
                                 <div>
                                     <p class="m-0"><%= section.name %></p>
                                     <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
-                                    <% if (currentUser && currentUser.admin) { %>
+                                    <% if (currentUser && currentUser.isEditor) { %>
                                         <p class="text-muted text-small mb-0">ID sekce: <%= section._id %></p>
                                        <% } %>
                                 </div>
@@ -138,7 +138,7 @@
                             <div class="col-2 d-flex justify-content-evenly align-items-center">
                                 <p class="m-0"><%= section.cards.length %> </p>
                                 <p class="text-muted text-small mb-0">kartiček</p>
-                                <% if (currentUser && currentUser.admin) { %>
+                                <% if (currentUser && currentUser.isEditor) { %>
                                     <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                     <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
                                     <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
@@ -172,8 +172,8 @@
     </div>
 </div>
 
-<!-- Pouze admin - formular pro pridani sekce -->
-<% if (currentUser && currentUser.admin) { %>
+<!-- Pouze editor - formular pro pridani sekce -->
+<% if (currentUser && currentUser.isEditor) { %>
 <div class="row">
     <div class="col-md-7 offset-md-4 mb-3 mt-4">
         <div class="card add-section">
