--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -40,13 +40,15 @@
                     </div>
                     <div>
                         <select class="form-select" name="faculty" id="faculty">
-                            <option selected value="Neuvedeno">Zvolte fakultu (nepovinné)</option>
-                            <option value="PrF UP">PrF UP</option>
-                            <option value="PrF UK">PrF UK</option>
-                            <option value="PrF MUNI">PrF MUNI</option>
-                            <option value="PrF ZČU">PrF ZČU</option>
+                            <option selected value="Neuvedeno">Zvolte fakultu</option>
+                            <option value="PrF UP">Studuji PrF UP</option>
+                            <option value="PrF UK">Studuji PrF UK</option>
+                            <option value="PrF MUNI">Studuji PrF MUNI</option>
+                            <option value="PrF ZČU">Studuji PrF ZČU</option>
                             <option value="Jiná">Jiná</option>
+                            <option value="Uchazeč">Hlásím se ke studiu</option>
                             <option value="Nestuduji">Již nestuduji</option>
+                            <option value="Neuvedeno">Nechci uvést</option>
                           </select>
                     </div>
 
