--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -42,7 +42,7 @@
             </div>
             <div class="container">
                 <div class="row px-lg-5 px-2">
-                    <div class="col-12 col-lg-4 price-table-wrapper">
+                    <div class="col-12 col-lg-3 price-table-wrapper p-0">
                         <div class="card premium-plan-card m-4 mt-0">
                             <div class="card-header">
                                 <div>
@@ -51,11 +51,12 @@
                                 </div>
                             </div>
                             <div class="height-85">
-                                <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                                     <div class="price-tag-inner">
                                         <span class="price">0 Kč</span> / <span class="period">napořád</span>
                                     </div>
                                 </div> 
+                                <p class="text-center monthly-equivalent">(0 Kč za měsíc<sup>*</sup>)</p>
                                 <p class="text-center my-3">Bezplatná verze aplikace bez časového omezení.</p>
                                 <p class="text-center mt-3 mb-1"><b>Co získáš?</b></p>
                                 <p class="text-center my-1" style="font-size:0.8rem">více než 1 500<br> opakovacích kartiček</p>
@@ -73,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper">
+                    <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
                         <div class="card premium-plan-card m-4 mt-0">
                             <div class="card-header">
                                 <div>
@@ -81,11 +82,12 @@
                                     <p class="card-header-period">měsíční</p>
                                 </div>
                             </div>
-                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                            <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                                 <div class="price-tag-inner">
                                     <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
                                 </div>
                             </div> 
+                            <p class="text-center monthly-equivalent">(199 Kč za měsíc<sup>*</sup>)</p>
                             <div class="height-85">
                                 <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
                                 <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
@@ -105,7 +107,40 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper">
+                    <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">půlroční</p>
+                                </div>
+                            </div>
+                            <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
+                                <div class="price-tag-inner">
+                                    <span class="price">890 Kč</span> / <span class="period">půlročně</span>
+                                </div>
+                            </div> 
+                            <p class="text-center monthly-equivalent">(149 Kč za měsíc<sup>*</sup>)</p>
+                            <div class="height-85">
+                                <p class="text-center my-3">Předplatné Premium se slevou za půlroční platbu.</p>
+                                <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
+                                <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
+                                <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
+                            </div>
+                            <div class="px-3 d-flex justify-content-center">
+                                <% if (!currentUser) { %>
+                                    <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && !currentUser.isPremium) { %>
+                                    <a href="#" id="checkout-button-halfyear" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && currentUser.isPremium) { %>
+                                    <a href="#" class="btn btn-danger my-3 disabled">Je aktivní balíček Premium</a> 
+                                <% } %>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
                         <div class="card premium-plan-card m-4 mt-0">
                             <div class="card-header">
                                 <div>
@@ -113,11 +148,12 @@
                                     <p class="card-header-period">roční</p>
                                 </div>
                             </div>
-                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                            <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                                 <div class="price-tag-inner">
                                     <span class="price">1 490 Kč</span> / <span class="period">ročně</span>
                                 </div> 
                             </div>
+                            <p class="text-center monthly-equivalent">(124 Kč za měsíc<sup>*</sup>)</p>
                             <div class="height-85">
                                 <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
                                 <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
@@ -140,7 +176,8 @@
             <div class="row mt-lg-3">
                 <div class="col-12 col-sm-8 offset-sm-2 mt-4">
                     <div class="d-flex flex-column justify-content-center align-items-center">
-                        <p class=" text-center p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                        <p class=" text-center p-3 pb-1">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                        <p class=" text-center text-small p-3 pb-5"><sup>*</sup> Předplatné je placeno vždy za celé zvolené obdobní najednou.</b></p>
                     </div>
                 </div>
             </div>
