checkout bug fix

--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -137,39 +137,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Chcete-li změnit <b>roční předplatné na měsíční nebo půlroční</b>, učiňte tak prosím až ke konci ročního období. Platební systém bohužel neumí zachovat informaci o předplaceném období a změnou tak dojde ke ztrátě předplaceného období.
-          </p>
-          <p>
-            <b>Změnou období z ročního na půlroční nebo měsíční berete na vědomí a přijímáte, že dojde ke zkrácení předplaceného období na 1 měsíc.</b>
-          </p>
-          <p>
-            Chcete-li předplatné <b>zrušit</b>, zůstane Vám aktivní do konce předplaceného období.
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Zavřít</button>
-          <button id="manage-billing-button" class="btn btn-sm btn-danger" type="submit">
-            Pokračovat
-        </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal Warning HALFYEAR to MONTH -->
-<div class="modal fade" id="modal-warning-halfyear" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Upozornění</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>
-            Chcete-li změnit <b>půlroční předplatné na měsíční</b>, učiňte tak prosím až ke konci ročního období. Platební systém bohužel neumí zachovat informaci o předplaceném období a změnou tak dojde ke ztrátě předplaceného období.
-          </p>
-          <p>
-            <b>Změnou období z půlročního na měsíční berete na vědomí a přijímáte, že dojde ke zkrácení předplaceného období na 1 měsíc.</b>
+            Chcete-li předplatné změnit na jiné platební obdobní, bude Vám při změně na kratší období nevyčerpaná hodnota předplatného přímo úměrná zůstatku období převedena na kredit, který bude poté možné použít k nákupu dalšího předplatného.
           </p>
           <p>
             Chcete-li předplatné <b>zrušit</b>, zůstane Vám aktivní do konce předplaceného období.
