--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -51,12 +51,8 @@
                         <div class="col-8">
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="mb-0">aktivní do <%= endDate %> </p>
-                                <% if(user.plan === "yearly" && user.premiumGrantedByAdmin !== true){ %>
-                                    <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-warning-year">
-                                        Správa předplatného
-                                    </button>
-                                <% } else if (user.plan === "halfyear" && user.premiumGrantedByAdmin !== true) { %>
-                                    <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-warning-halfyear">
+                                <% if((user.plan === "yearly" || user.plan === "halfyear") && user.premiumGrantedByAdmin !== true){ %>
+                                    <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-warning">
                                         Správa předplatného
                                     </button>
                                 <% } else if (!user.premiumGrantedByAdmin === true){ %>
@@ -128,7 +124,7 @@
 </div>
 
 <!-- Modal Warning YEAR to SHORTER PERIOD -->
-<div class="modal fade" id="modal-warning-year" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
+<div class="modal fade" id="modal-warning" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
