checkout bug fix

--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
             <div class="card text-center p-4">
-                <% if(currentUser.isPremium) %>
+                <% if(currentUser.isPremium){ %>
                     <h3>Předplatné prodlouženo</h3>
                 <% } else { %>
                     <h3>Předplatné aktivováno</h3>
