--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -178,6 +178,9 @@
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <p class=" text-center p-3 pb-1">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
                         <p class=" text-center text-small p-3 pb-5"><sup>*</sup> Předplatné je placeno vždy za celé zvolené obdobní najednou.</b></p>
+                        <% if (currentUser && currentUser.admin) { %>
+                            <a href="#" id="checkout-button-daily" class="btn btn-sm btn-danger my-3" style="min-width:115px">Aktivovat denní předplatné (testovací)</a> 
+                        <% } %>
                     </div>
                 </div>
             </div>
