--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -13,7 +13,7 @@
                         <p>Kontaktní osoba</p>
                     </div>
                     <div class="col-8">
-                        <p>Ondřej Novák</p>
+                        <p>Jakub Spáčil</p>
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
