--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,10 @@
     border-radius: 10px;
 }
 
+*:focus {
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0);
+}
+
 /*CATEGORY*/
 
 .section-list .add-icon {
