added meta tags

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,15 @@
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/landing.css">
     <!-- META TAGS -->
+    <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+    <meta name="author"                    content="Chilero s. r. o.">
+    <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
+    <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
+    <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+    <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="Studuj práva efektivně s InLege" />
-    <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+    <meta property="og:description"        content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!" />
     <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
 </head>
 <!-- Google tag (gtag.js) -->
