--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="/css/landing.css">
     <link rel="stylesheet" href="/css/premium.css">
     <!-- META TAGS -->
+    <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+    <meta name="author"                    content="Chilero s. r. o.">
+    <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
+    <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
+    <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+    <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
     <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
